--- a/index.html
+++ b/index.html
@@ -8,26 +8,68 @@
   
   <title>Frontend Mentor | Stats preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!-- custome css -->
+  <link rel="stylesheet" href="./Css/style.css">
+  
 </head>
 <body>
 
-  Get insights that help your business grow.
+  <div class="container">
+    <main>
+      <div class="card">
+        <!-- card-image -->
+        <div class="card-image">
+          <div class="overlay"></div>
+        </div>
+        <!-- card-content -->
+        <div class="card-content">
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+          <div class="pry-content">
 
-  10k+ companies
-  314 templates
-  12m+ queries
+            <h1 class="card-header">
+              Get <span class="text-purple">insights</span> that help your business grow.
+            </h1>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+            <p class="card-description">
+              Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+              experience, and overall efficiency.
+            </p>
+
+          </div>
+
+          <div class="sec-content">
+
+            <div class="card-stats">
+              <h2 class="stats">10k+</h2>
+              <p class="stats-info">companies</p>
+            </div>
+
+            <div class="card-stats">
+              <h2 class="stats">314</h2>
+              <p class="stats-info">templates</p>
+            </div>
+
+            <div class="card-stats">
+              <h2 class="stats">12M+</h2>
+              <p class="stats-info">queries</p>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </main>
+
+    <!-- card-footer -->
+    <div class="attribution" role="contentinfo">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">iSoyecodes</a>.
+    </div>
+
   </div>
+
+  
+  
 </body>
 </html>
