--- a/index.html
+++ b/index.html
@@ -10,66 +10,51 @@
 
   <!-- custome css -->
   <link rel="stylesheet" href="./Css/style.css">
+  <link rel="stylesheet" href="./Css/reset.css">
   
 </head>
 <body>
 
-  <div class="container">
+  <div class="stats-container">
     <main>
-      <div class="card">
-        <!-- card-image -->
-        <div class="card-image">
-          <div class="overlay"></div>
+      <!-- Inner card container -->
+      <div class="stats-card">
+        <!-- Card-Imgae -->
+        <div class="image-container">
+          <img src="./images/image-header-mobile.jpg" alt="Three women discussing about businesss work">
         </div>
-        <!-- card-content -->
-        <div class="card-content">
+        <!-- card-content-->
+        <div class="stats-content">
+          <h1 class="stats-header">Get <span>insights</span> that help your business grow.</h1>
+          <p class="stats-details">Discover the benefits of data analytics and  make better 
+            decisions regarding revenue, customer experience, and overall efficiency.</p>
 
-          <div class="pry-content">
-
-            <h1 class="card-header">
-              Get <span class="text-purple">insights</span> that help your business grow.
-            </h1>
-
-            <p class="card-description">
-              Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-              experience, and overall efficiency.
-            </p>
-
-          </div>
-
-          <div class="sec-content">
-
-            <div class="card-stats">
-              <h2 class="stats">10k+</h2>
-              <p class="stats-info">companies</p>
+          <div class="stats-info">
+            <div>
+              <h2 class="stats-value">10k</h2>
+              <p class="stats-des">Companies</p>
             </div>
-
-            <div class="card-stats">
-              <h2 class="stats">314</h2>
-              <p class="stats-info">templates</p>
+            <div>
+              <h2 class="stats-value">314</h2>
+              <p class="stats-des">Templates</p>
             </div>
-
-            <div class="card-stats">
-              <h2 class="stats">12M+</h2>
-              <p class="stats-info">queries</p>
+            <div>
+              <h2 class="stats-value">12M+</h2>
+              <p class="stats-des">Queries</p>
             </div>
 
           </div>
-
         </div>
-
+  
       </div>
     </main>
-
-    <!-- card-footer -->
-    <div class="attribution" role="contentinfo">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">iSoyecodes</a>.
-    </div>
-
   </div>
 
-  
-  
+
+    <!-- <div class="attribution" role="contentinfo">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">iSoyecodes</a>.
+    </div> -->
+
 </body>
 </html>
